--- a/index.html
+++ b/index.html
@@ -1,35 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | Profile card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
+  <div class="backdrop-container">
+    <img src="images/bg-pattern-top.svg" alt="Top Background Pattern" class="bg-pattern-top">
+    <img src="images/bg-pattern-bottom.svg" alt="Bottom Background Pattern" class="bg-pattern-bottom">
+  </div>
+  <div class="container">
+    <div class="card">
+      <img src="images/bg-pattern-card.svg" alt="Card Backdrop" class="card-backdrop">
+      <img src="images/image-victor.jpg" alt="Victor's Profile Picture" class="profile-img">
+      <div class="card-body">
+        <h2 class="profile-header">
+          <span class="name">Victor Crest</span><span class="age">26</span>
+        </h2>
+        <h3 class="location">London</h3>
+        <div class="divider"></div>
+        <div class="card-stats">
+          <div class="stats">
+            <span class="stats-value">80K</span><span class="stats-title">Followers</span>
+          </div>
+          <div class="stats">
+            <span class="stats-value">803K</span><span class="stats-title">Likes</span>
+          </div>
+          <div class="stats">
+            <span class="stats-value">1.4K</span><span class="stats-title">Photos</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/waldosmuts" target="_blank">Waldo Smuts</a>.
   </div>
 </body>
+
 </html>
